opam-version: "2.0"
name: "gen_js_api"
version: "1.0.5"
maintainer: "Alain Frisch <alain.frisch@lexifi.com>"
authors: [
  "Alain Frisch <alain.frisch@lexifi.com>"
  "Sebastien Briais <sebastien.briais@lexifi.com"
]
homepage: "https://github.com/LexiFi/gen_js_api"
bug-reports: "https://github.com/LexiFi/gen_js_api/issues"
license: "MIT"
dev-repo: "git+https://github.com/LexiFi/gen_js_api.git"
build: [["dune" "build" "-p" name "-j" jobs]]
depends: [
  "ocaml" {>= "4.06.0" & < "4.09.0"}
  "dune" {build & >= "1.11"}
  "js_of_ocaml"  {>= "3.1.0"}
]
synopsis: "Easy OCaml bindings for Javascript libraries"
description: """
gen_js_api aims at simplifying the creation of OCaml bindings for
Javascript libraries.  Authors of bindings write OCaml signatures for
Javascript libraries and the tool generates the actual binding code
with a combination of implicit conventions and explicit annotations.

gen_js_api is to be used with the js_of_ocaml compiler."""
