opam-version: "2.0"
name: "gen_js_api"
version: "1.0.6"
maintainer: "Alain Frisch <alain.frisch@lexifi.com>"
authors: [
  "Alain Frisch <alain.frisch@lexifi.com>"
  "Sebastien Briais <sebastien.briais@lexifi.com>"
]
homepage: "https://github.com/LexiFi/gen_js_api"
bug-reports: "https://github.com/LexiFi/gen_js_api/issues"
license: "MIT"
dev-repo: "git+https://github.com/LexiFi/gen_js_api.git"
build: [["dune" "build" "-p" name "-j" jobs]]
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.0"}
  "ocaml-migrate-parsetree" {>= "1.6.0" & < "2.0.0"}
  "ppxlib" {>= "0.9"}
  "js_of_ocaml-compiler" { with-test & >= "3.0" }
]
conflicts: [
  "js_of_ocaml-compiler" { < "3.0" }
]
synopsis: "Easy OCaml bindings for Javascript libraries"
description: """
gen_js_api aims at simplifying the creation of OCaml bindings for
Javascript libraries.  Authors of bindings write OCaml signatures for
Javascript libraries and the tool generates the actual binding code
with a combination of implicit conventions and explicit annotations.

gen_js_api is to be used with the js_of_ocaml compiler."""
