(executables
 (names main)
 (libraries ojs)
 (preprocess
  (pps gen_js_api.ppx))
 (modes js))

(rule
 (targets test_bindings.ml)
 (deps test_bindings.mli)
 (action
  (run gen_js_api %{deps})))

(rule
 (targets main.js)
 (deps main.bc.js)
 (action
  (run cp %{deps} %{targets})))

(alias
 (name DEFAULT)
 (deps main.js main.html))
