(library
 (name node)
 (synopsis "Bindings")
 (libraries gen_js_api)
 (preprocess (pps gen_js_api.ppx))
 (modes byte)
 (js_of_ocaml (javascript_files imports.js)))

(rule
 (targets imports.ml)
 (deps imports.mli)
 (action
  (run gen_js_api %{deps})))

(rule
 (alias runtest)
 (action
  (diff expected/imports.ml imports.ml)))


(rule
 (targets global.ml)
 (deps global.mli)
 (action
  (run gen_js_api %{deps})))

(rule
 (alias runtest)
 (action
  (diff expected/global.ml global.ml)))

(rule
 (targets promise.ml)
 (deps promise.mli)
 (action
  (run gen_js_api %{deps})))

(rule
 (alias runtest)
 (action
  (diff expected/promise.ml promise.ml)))

(rule
 (targets buffer.ml)
 (deps buffer.mli)
 (action
  (run gen_js_api %{deps})))

(rule
 (alias runtest)
 (action
  (diff expected/buffer.ml buffer.ml)))

(rule
 (targets fs.ml)
 (deps fs.mli)
 (action
  (run gen_js_api %{deps})))

(rule
 (alias runtest)
 (action
  (diff expected/fs.ml fs.ml)))

(rule
 (targets path.ml)
 (deps path.mli)
 (action
  (run gen_js_api %{deps})))

(rule
 (alias runtest)
 (action
  (diff expected/path.ml path.ml)))

(rule
 (targets process.ml)
 (deps process.mli)
 (action
  (run gen_js_api %{deps})))

(rule
 (alias runtest)
 (action
  (diff expected/process.ml process.ml)))

(rule
 (targets console.ml)
 (deps console.mli)
 (action
  (run gen_js_api %{deps})))

(rule
 (alias runtest)
 (action
  (diff expected/console.ml console.ml)))
