(executable
 (name test)
 (libraries ojs node)
 (preprocess
  (pps gen_js_api.ppx))
 (modes js)
 (js_of_ocaml
  (javascript_files recursive.js)))

(rule
 (targets recursive.ml)
 (deps recursive.mli)
 (action
  (run gen_js_api %{deps})))

(rule
 (alias runtest)
 (action
  (run node %{dep:./test.bc.js})))
